--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 # production
 /build
 /backend/puzzle/__pycache__
+/backend/puzzle/main.py
+/backend/puzzle/dev_log.tex
+/backend/puzzle/dev_log.pdf
 # misc
 .DS_Store
 .env.local
