--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,4 +18,4 @@ jobs:
         run: pip install pytest
       - name: Run tests with pytest
         run: |
-          pytest
+          pipenv run test -v
