--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,9 +13,9 @@ jobs:
           python-version: 3.6
       - name: Install pipenv
         run: |
-          python -m pip install --upgrade pipenv wheel
+          python -m pip install --upgrade pipenv
       - name: Install Pytest
         run: pip install pytest
       - name: Run tests with pytest
         run: |
-          pipenv run test -v
+          python -m pytest
