--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -11,6 +11,9 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.6
+      - name: Install pipenv
+        run: |
+          python -m pip install --upgrade pipenv
       - name: Install Pytest
         run: pip install pytest
       - name: Run tests with pytest
