--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,10 +16,10 @@ jobs:
         with:
           python-version: 3.6
       - name: Install Pillow
-        run: |
-          python -m pip install --upgrade Pillow
+        run: python -m pip install --upgrade Pillow
+      - name: Install Pipenv
+        run: python -m pip install --upgrade pipenv
       - name: Install Pytest
         run: python -m pip install pytest
       - name: Run tests with pytest
-        run: |
-          python -m pytest
+        run: pipenv run test -v
