--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,12 +15,14 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.6
-          
+
       - name: Install Pillow
         run: python -m pip install --upgrade Pillow
       - name: Install Pipenv
         run: python -m pip install --upgrade pipenv
       - name: Install Pytest
         run: python -m pip install pytest
+      - name: Go to directory
+        run: cd backend/puzzle
       - name: Run tests with pytest
         run: pipenv run test -v
