--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,10 @@
 
 # production
 /build
-/backend/puzzle/src/__pycache__
-/backend/puzzle/tests/.pytest_cache
-/backend/puzzle/.pytest_cache
-/backend/puzzle/src/main.py
-/backend/puzzle/dev_log.tex
-/backend/puzzle/dev_log.pdf
-/backend/puzzle/.texpadtmp
+/src/__pycache__
+/tests/.pytest_cache
+/.pytest_cache
+/src/main.py
 /.env
 # misc
 .DS_Store
